@@ -1,6 +1,7 @@
 Version 0.8.1 (ongoing):
 	random_isometry
 	doctest fixes for sage
+	can pass HilbertBaseField for dtype
 
 Version 0.8 (2011-12-01):
 	as_np_matrix take {row,col}_space args
